Thu Jun  9 21:42:00 2016  Kazuki Yamaguchi  <k@rhe.jp>

	* ext/openssl/ossl_asn1.c (asn1integer_to_num): Use
	  ASN1_ENUMERATED_to_BN() to convert an ASN1_ENUMERATED to a BN.
	  Starting from OpenSSL 1.1.0, ASN1_INTEGER_to_BN() rejects
	  non-ASN1_INTEGER objects. The format of INTEGER and ENUMERATED are
	  almost identical so they behaved in the same way in OpenSSL <= 1.0.2.
	  [ruby-core:75225] [Feature #12324]

	* test/openssl/test_asn1.rb (test_decode_enumerated): Test that it
	  works.

Thu Jun  9 21:10:04 2016  Kazuhiro NISHIYAMA  <zn@mbf.nifty.com>

	* tool/ifchange: fix timestamp error when target without
	  directory.

Thu Jun  9 19:46:22 2016  Kazuki Yamaguchi  <k@rhe.jp>

	* ext/openssl/ossl_ssl.c: Add define guards for OPENSSL_NO_EC.
	  SSL_CTX_set_ecdh_auto() is defined even when ECDH is disabled in
	  OpenSSL's configuration. This fixes r55214.

	* test/openssl/test_pair.rb (test_ecdh_curves): Skip if the OpenSSL does
	  not support ECDH.

	* test/openssl/utils.rb (start_server): Ignore error in
	  SSLContext#ecdh_curves=.

Thu Jun  9 18:12:42 2016  Nobuyoshi Nakada  <nobu@ruby-lang.org>

	* Makefile.in (un-runnable): fail with proper error message.
	  [ruby-core:75905] [Bug #12472]

Thu Jun  9 15:32:17 2016  Nobuyoshi Nakada  <nobu@ruby-lang.org>

	* common.mk (RBCONFIG): use ifchange tool to see if the content is
	  changed and update the timestamp file.

	* tool/mkconfig.rb: remove ifchange features.

	* tool/ifchange: make target directory if it does not exist with
	  its parent directories.

	* win32/ifchange.bat: drop support for command.com used on old
	  systems.

Thu Jun  9 15:03:35 2016  Kazuki Yamaguchi  <k@rhe.jp>

	* ext/openssl/extconf.rb: Check for CRYPTO_malloc() and SSL_new().
	  OpenSSL_add_all_digests() and SSL_library_init() are deprecated and
	  converted to macros in OpenSSL 1.1.0.
	  [ruby-core:75225] [Feature #12324]

Wed Jun  8 23:09:51 2016  Kazuhiro NISHIYAMA  <zn@mbf.nifty.com>
